# dev-app

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
src/dev2il_devops_app/: main.py
src/testing/: test_main_fit.py  test_main_root.py
