[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dev2il-devops-app"
version = "1.0.0"
requires-python = ">=3.13.0"
dependencies = [
    "fastapi==0.115.12",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "uvicorn==0.34.2",
]

[project.optional-dependencies]
lint = [
    "ruff==0.11.8",
]
test = [
    "pytest==8.3.5",
]

[project.scripts]
dev2il-devops-app = "dev2il_devops_app.main:run"
